bindings/c/whiteout_textures.h

typedef struct whiteout_Texture whiteout_Texture;
typedef struct whiteout_BmpParser whiteout_BmpParser;
typedef struct whiteout_BmpWriter whiteout_BmpWriter;
typedef struct whiteout_TgaParser whiteout_TgaParser;
typedef struct whiteout_TgaWriter whiteout_TgaWriter;
typedef struct whiteout_TiffParser whiteout_TiffParser;
typedef struct whiteout_TiffWriter whiteout_TiffWriter;
typedef struct whiteout_GifSaveOptions whiteout_GifSaveOptions;
typedef struct whiteout_GifWriter whiteout_GifWriter;
/* @return accumulated issues from the last parse call. */
size_t whiteout_textures_BmpParser_getIssues_count(const whiteout_BmpParser* self);
whiteout_CString whiteout_textures_BmpParser_getIssues_at(const whiteout_BmpParser* self, size_t index);
/* ── BmpWriter ─────────────────────────────────────────────── */

/* Encodes a Texture into BMP format. */
whiteout_BmpWriter* whiteout_textures_BmpWriter_new(void);
void whiteout_textures_BmpWriter_delete(whiteout_BmpWriter* self);
/* Serialize the texture to a BMP byte buffer. */
whiteout_Bytes whiteout_textures_BmpWriter_write(whiteout_BmpWriter* self, struct whiteout_Texture* texture);
/* @return true if the last write produced any issues. */
int32_t whiteout_textures_BmpWriter_hasIssues(const whiteout_BmpWriter* self);
/* @return accumulated issues from the last write call. */
size_t whiteout_textures_BmpWriter_getIssues_count(const whiteout_BmpWriter* self);
whiteout_CString whiteout_textures_BmpWriter_getIssues_at(const whiteout_BmpWriter* self, size_t index);
/* ── TgaParser ─────────────────────────────────────────────── */

/* Reads a TGA file or byte buffer and decodes it into a Texture. */
whiteout_TgaParser* whiteout_textures_TgaParser_new(void);
void whiteout_textures_TgaParser_delete(whiteout_TgaParser* self);
/* Parse a TGA byte buffer. */
struct whiteout_Texture* whiteout_textures_TgaParser_parse(whiteout_TgaParser* self, const uint8_t* buffer, size_t buffer_size);
/* @return true if the last parse produced any issues. */
int32_t whiteout_textures_TgaParser_hasIssues(const whiteout_TgaParser* self);
/* @return accumulated issues from the last parse call. */
size_t whiteout_textures_TgaParser_getIssues_count(const whiteout_TgaParser* self);
whiteout_CString whiteout_textures_TgaParser_getIssues_at(const whiteout_TgaParser* self, size_t index);
/* ── TgaWriter ─────────────────────────────────────────────── */

/* Encodes a Texture into TGA format. */
whiteout_TgaWriter* whiteout_textures_TgaWriter_new(void);
void whiteout_textures_TgaWriter_delete(whiteout_TgaWriter* self);
/* Serialize the texture to a TGA byte buffer. */
whiteout_Bytes whiteout_textures_TgaWriter_write(whiteout_TgaWriter* self, struct whiteout_Texture* texture);
/* @return true if the last write produced any issues. */
int32_t whiteout_textures_TgaWriter_hasIssues(const whiteout_TgaWriter* self);
/* @return accumulated issues from the last write call. */
size_t whiteout_textures_TgaWriter_getIssues_count(const whiteout_TgaWriter* self);
whiteout_CString whiteout_textures_TgaWriter_getIssues_at(const whiteout_TgaWriter* self, size_t index);
/* ── TiffParser ─────────────────────────────────────────────── */

/* Reads a TIFF file or byte buffer and decodes it into a Texture. */
whiteout_TiffParser* whiteout_textures_TiffParser_new(void);
void whiteout_textures_TiffParser_delete(whiteout_TiffParser* self);
/* Parse a TIFF byte buffer. */
struct whiteout_Texture* whiteout_textures_TiffParser_parse(whiteout_TiffParser* self, const uint8_t* buffer, size_t buffer_size);
/* @return true if the last parse produced any issues. */
int32_t whiteout_textures_TiffParser_hasIssues(const whiteout_TiffParser* self);
/* @return accumulated issues from the last parse call. */
size_t whiteout_textures_TiffParser_getIssues_count(const whiteout_TiffParser* self);
whiteout_CString whiteout_textures_TiffParser_getIssues_at(const whiteout_TiffParser* self, size_t index);
/* ── TiffWriter ─────────────────────────────────────────────── */

/* Encodes a Texture into TIFF format. */
whiteout_TiffWriter* whiteout_textures_TiffWriter_new(void);
void whiteout_textures_TiffWriter_delete(whiteout_TiffWriter* self);
/* Serialize the texture to a TIFF byte buffer. */
whiteout_Bytes whiteout_textures_TiffWriter_write(whiteout_TiffWriter* self, struct whiteout_Texture* texture);
/* @return true if the last write produced any issues. */
int32_t whiteout_textures_TiffWriter_hasIssues(const whiteout_TiffWriter* self);
/* @return accumulated issues from the last write call. */
size_t whiteout_textures_TiffWriter_getIssues_count(const whiteout_TiffWriter* self);
whiteout_CString whiteout_textures_TiffWriter_getIssues_at(const whiteout_TiffWriter* self, size_t index);
/* ── GifSaveOptions ─────────────────────────────────────────────── */

/* Per-write options for GIF encoding. */
whiteout_GifSaveOptions* whiteout_textures_GifSaveOptions_new(void);
void whiteout_textures_GifSaveOptions_delete(whiteout_GifSaveOptions* self);
/* Delay between frames in centiseconds (1/100 s).  0 = unspecified. */
uint16_t whiteout_textures_GifSaveOptions_get_delayCs(const whiteout_GifSaveOptions* self);
void whiteout_textures_GifSaveOptions_set_delayCs(whiteout_GifSaveOptions* self, uint16_t value);
/* Number of times the animation should loop.  0 = loop forever. */
uint16_t whiteout_textures_GifSaveOptions_get_loopCount(const whiteout_GifSaveOptions* self);
void whiteout_textures_GifSaveOptions_set_loopCount(whiteout_GifSaveOptions* self, uint16_t value);
/* Enable blue-noise ordered dithering when mapping pixels to the palette. */
int32_t whiteout_textures_GifSaveOptions_get_dither(const whiteout_GifSaveOptions* self);
void whiteout_textures_GifSaveOptions_set_dither(whiteout_GifSaveOptions* self, int32_t value);
/* Dither strength in [0, 1].  0 = no visible dithering, 1 = full. */
float whiteout_textures_GifSaveOptions_get_ditherStrength(const whiteout_GifSaveOptions* self);
void whiteout_textures_GifSaveOptions_set_ditherStrength(whiteout_GifSaveOptions* self, float value);
/* Emit a transparent background. Pixels whose source alpha is below 50% become the GIF's transparent palette index; the rest are quantised normally. GIF transparency is 1-bit, so partially-covered (anti- aliased) edge pixels are forced fully opaque or fully transparent. */
int32_t whiteout_textures_GifSaveOptions_get_transparent(const whiteout_GifSaveOptions* self);
void whiteout_textures_GifSaveOptions_set_transparent(whiteout_GifSaveOptions* self, int32_t value);
/* ── GifWriter ─────────────────────────────────────────────── */

/* Encodes a sequence of Texture frames into GIF89a format. */
/*  */
/* Unlike the single-image writers (BMP, TGA, …), this writer accepts a vector of frames.  It does **not** inherit from `textures::Writer`. */
whiteout_GifWriter* whiteout_textures_GifWriter_new(void);
whiteout_GifWriter* whiteout_textures_GifWriter_new_pool(void* pool);
void whiteout_textures_GifWriter_delete(whiteout_GifWriter* self);
/* @return true if the last write produced any issues. */
int32_t whiteout_textures_GifWriter_hasIssues(const whiteout_GifWriter* self);
/* @return accumulated issues from the last write call. */
size_t whiteout_textures_GifWriter_getIssues_count(const whiteout_GifWriter* self);
whiteout_CString whiteout_textures_GifWriter_getIssues_at(const whiteout_GifWriter* self, size_t index);