bindings/csharp/Whiteout/Textures/NativeMethods.Textures.cs


    [LibraryImport(Runtime.LibraryName)]
    internal static partial nuint whiteout_textures_BmpParser_getIssues_count(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial Whiteout.Common.NativeCString whiteout_textures_BmpParser_getIssues_at(IntPtr self, nuint index);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_textures_BmpWriter_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_textures_BmpWriter_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial Whiteout.Common.NativeBytes whiteout_textures_BmpWriter_write(IntPtr self, IntPtr texture);


    [LibraryImport(Runtime.LibraryName)]
    [return: MarshalAs(UnmanagedType.I4)]
    internal static partial int whiteout_textures_BmpWriter_hasIssues(IntPtr self);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial nuint whiteout_textures_BmpWriter_getIssues_count(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial Whiteout.Common.NativeCString whiteout_textures_BmpWriter_getIssues_at(IntPtr self, nuint index);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_textures_TgaParser_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_textures_TgaParser_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_textures_TgaParser_parse(IntPtr self, ReadOnlySpan<byte> buffer, nuint buffer_size);


    [LibraryImport(Runtime.LibraryName)]
    [return: MarshalAs(UnmanagedType.I4)]
    internal static partial int whiteout_textures_TgaParser_hasIssues(IntPtr self);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial nuint whiteout_textures_TgaParser_getIssues_count(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial Whiteout.Common.NativeCString whiteout_textures_TgaParser_getIssues_at(IntPtr self, nuint index);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_textures_TgaWriter_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_textures_TgaWriter_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial Whiteout.Common.NativeBytes whiteout_textures_TgaWriter_write(IntPtr self, IntPtr texture);


    [LibraryImport(Runtime.LibraryName)]
    [return: MarshalAs(UnmanagedType.I4)]
    internal static partial int whiteout_textures_TgaWriter_hasIssues(IntPtr self);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial nuint whiteout_textures_TgaWriter_getIssues_count(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial Whiteout.Common.NativeCString whiteout_textures_TgaWriter_getIssues_at(IntPtr self, nuint index);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_textures_TiffParser_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_textures_TiffParser_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_textures_TiffParser_parse(IntPtr self, ReadOnlySpan<byte> buffer, nuint buffer_size);


    [LibraryImport(Runtime.LibraryName)]
    [return: MarshalAs(UnmanagedType.I4)]
    internal static partial int whiteout_textures_TiffParser_hasIssues(IntPtr self);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial nuint whiteout_textures_TiffParser_getIssues_count(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial Whiteout.Common.NativeCString whiteout_textures_TiffParser_getIssues_at(IntPtr self, nuint index);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_textures_TiffWriter_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_textures_TiffWriter_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial Whiteout.Common.NativeBytes whiteout_textures_TiffWriter_write(IntPtr self, IntPtr texture);


    [LibraryImport(Runtime.LibraryName)]
    [return: MarshalAs(UnmanagedType.I4)]
    internal static partial int whiteout_textures_TiffWriter_hasIssues(IntPtr self);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial nuint whiteout_textures_TiffWriter_getIssues_count(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial Whiteout.Common.NativeCString whiteout_textures_TiffWriter_getIssues_at(IntPtr self, nuint index);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_textures_GifSaveOptions_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_textures_GifSaveOptions_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial ushort whiteout_textures_GifSaveOptions_get_delayCs(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_textures_GifSaveOptions_set_delayCs(IntPtr self, ushort value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial ushort whiteout_textures_GifSaveOptions_get_loopCount(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_textures_GifSaveOptions_set_loopCount(IntPtr self, ushort value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial int whiteout_textures_GifSaveOptions_get_dither(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_textures_GifSaveOptions_set_dither(IntPtr self, int value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_textures_GifSaveOptions_get_ditherStrength(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_textures_GifSaveOptions_set_ditherStrength(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial int whiteout_textures_GifSaveOptions_get_transparent(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_textures_GifSaveOptions_set_transparent(IntPtr self, int value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_textures_GifWriter_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_textures_GifWriter_new_pool(IntPtr pool);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_textures_GifWriter_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    [return: MarshalAs(UnmanagedType.I4)]
    internal static partial int whiteout_textures_GifWriter_hasIssues(IntPtr self);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial nuint whiteout_textures_GifWriter_getIssues_count(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial Whiteout.Common.NativeCString whiteout_textures_GifWriter_getIssues_at(IntPtr self, nuint index);

}
